# pathfinder

./: .clang-format  .gitignore  CMakeLists.txt  a_star.cpp  cpmconfig.toml  dijkstra.cpp  main.cpp  map.hpp  map.txt  pathfinder.hpp
src/: a_star.cpp  dijkstra.cpp  idx_vec2.hpp  main.cpp  pathfinder.hpp
